# nu-backend

./: .coveragerc  .env  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  alembic.ini  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 6442f0101004_.py  757f8c3ab009_.py  bdc6d697a40f_.py
db/: pg_init.sh
newmu/: broadcast.py  deps.py  main.py
newmu/api/: __init__.py  login.py
newmu/db/: __init__.py  base.py  base_class.py  session.py
newmu/graphql/: loaders.py  mutations.py  queries.py  subscriptions.py  types.py
newmu/models/: __init__.py  channel.py  map.py  player.py
newmu/test/: test_nothing.py
nu/: __init__.py  broadcast.py  cli.py  commands.py  context.py  deps.py  extensions.py  info.py  loaders.py  main.py  plugin.py  subscriptions.py  types.py
nu/api/: login.py
nu/core/: __init__.py  config.py  models.py  types.py
nu/core/channels/: loaders.py  models.py  queries.py  types.py
nu/core/grid/: loaders.py  models.py  mutations.py  queries.py  subscriptions.py  types.py
nu/core/player/: loaders.py  models.py  queries.py  types.py
nu/db/: __init__.py  base.py  base_class.py  session.py
nu/graphql/: __init__.py  directives.py  loaders.py  mutations.py  pagination.py  queries.py  subscriptions.py  types.py
nu/models/: channel.py  map.py  player.py
nu/plugins/channels/: __init__.py  models.py  protocols.py  queries.py  resolvers.py  types.py
nu/plugins/channels/revisions/: env.py
nu/plugins/channels/revisions/versions/: 64fdec93ba19_.py  ce0afa34bb39_base_channel_revision.py
nu/plugins/grid/: __init__.py  mutations.py  types.py
nu/plugins/health/: __init__.py  models.py  protocols.py  types.py
nu/plugins/health/revisions/: env.py
nu/plugins/health/revisions/versions/: 69f006805ce7_.py
nu/plugins/magic/: __init__.py  models.py  protocols.py  types.py
nu/plugins/magic/revisions/: env.py
nu/plugins/magic/revisions/versions/: fd4564879a76_.py
nu/static/: graphiql.html
nu/test/: conftest.py  test_nothing.py
scripts/: format.sh  lint.sh
